kube_config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app-service
spec:
  selector:
    app: my-flask-app
  ports:
  - port: 8888
    targetPort: 8888
