kube_config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: my-flask-app
spec:
  rules:
  - host: my-flask-app.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-flask-app-service
            port:
              number: 8888
